--- a/public/knock-down-hard-town/index.html
+++ b/public/knock-down-hard-town/index.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon">   
+        <link rel="icon" href="http://localhost:1313/whinyjack-hugo/images/favicon.ico" type="image/x-icon">   
     </head>
     <body>
 
@@ -16,10 +16,7 @@
 <h1>Knock Down Hard Town</h1>
 
 <div class="single">
-    <p><div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-      <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; fullscreen" loading="eager" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dNv7Ih_lK64?autoplay=0&amp;controls=1&amp;end=0&amp;loop=0&amp;mute=0&amp;start=0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" title="YouTube video"></iframe>
-    </div>
-
+    <p><iframe width="560" height="315" src="https://www.youtube.com/watch?v=dNv7Ih_lK64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h2 id="-2016-by-jack-pennington">© 2016 by Jack Pennington</h2>
 <p>First release from the self-titled debut EP from <a href="https://www.youtube.com/channel/UCaGV4fvZx0GQlPxYdVVclmw">Hatchets</a>. Featuring the film debut of Ms. Sophie Gray Davis.</p>
 </p>
