remove single pages because youtube embeds SUCK

--- a/public/knock-down-hard-town/index.html
+++ b/public/knock-down-hard-town/index.html
@@ -16,7 +16,7 @@
 <h1>Knock Down Hard Town</h1>
 
 <div class="single">
-    <p><iframe width="560" height="315" src="https://www.youtube.com/watch?v=dNv7Ih_lK64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p><iframe width="100vw" height="450" src="https://www.youtube.com/watch?v=dNv7Ih_lK64" title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h2 id="-2016-by-jack-pennington">© 2016 by Jack Pennington</h2>
 <p>First release from the self-titled debut EP from <a href="https://www.youtube.com/channel/UCaGV4fvZx0GQlPxYdVVclmw">Hatchets</a>. Featuring the film debut of Ms. Sophie Gray Davis.</p>
 </p>
